Version 2.02.78 - 
====================================
  Add logging for unlink() error in clvmd remove_lockfile().
  Add logging for pipe write() and close() error in clvmd child_init_signal().
  Add test for existance of orphan vginfo in _lvmcache_update_vgname().
  Do a full rescan if some device is missing in read_pvs_in_vg().
  Avoid misleading warnings in vgextend --restoremissing in certain cases.
  Add error path stack traces for _process_mapper_dir(), _create_and_load_v4().
  Add missing test for failed pool allocation in write_config_node().
  Replace snprintf with dm_snprintf in clvmd-command.c.
  Check reallocated buffer for NULL before use in clvmd do_command().
  Fix memory leak when VG allocation policy in metadata is invalid.
  Ignore unrecognised allocation policy found in metadata instead of aborting.
  Factor out tag printing into _out_tags and avoid leaking string buffer.
  Remove some unused variables & assignments.
  Add missing vg_release calls in _vg_read_by_vgid.
Still to fix: LCK_CACHE/CLUSTER_VG printing/FIXME
  Fix test for no system_dir in _init_backup().
  Disallow lvconvert ops that both allocate & free supplied PEs in a single cmd.
  Fix liblvm seg_size to give bytes not sectors.
  Add functions to look up LV/PV by name/uuid to liblvm.
  Free cmd_context if fallback to LVM1 fails in lvm2_main().
  Free device name buffer in dmsetup parse_loop_device_name() error paths.
  Close format lib if init_format_fn fails in _init_formats().
  Don't leave /proc/mounts open after dmeventd snapshot event processing.
  Fix out-of-scope arg_vgnames use in process_each_lv().
  Remove incorrect dm_task_destroy(NULL) from _node_clear_table() error path.
  Add missing closedir in _rm_blks after removing stray LVM1 VG files.
  Suppress 'No PV label' message when removing several PVs without mdas.
  Fix default /etc/lvm permissions to be 0755. (2.02.66)

Version 2.02.77 - 22nd November 2010
====================================